cambios necesarios
